# termc

./: .gitignore  LICENSE  README.md  SysCLI.py  pyproject.toml
.github/workflows/: publish.yml
SysCLI/: core.py
syscli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
termc/: core.py
