[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termc"
version = "0.1.3"
description = "A lightweight Python CLI toolkit for building beautiful terminal interfaces"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "waasaty" }]

dependencies = [
    "colorama",
    "qrcode[pil]"
]

keywords = ["cli", "terminal", "ui", "colors", "python", "custom"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/waasaty/termc"
Documentation = "https://apt29.gitbook.io/termc"
Source = "https://github.com/waasaty/termc"

[tool.setuptools.packages.find]
include = ["termc*"]
exclude = ["assets*"]